syntax = "proto3";

option java_multiple_files = true;
package proto;

message JobAdProto {
  string userId = 1;
  string title = 2;
  string position = 3;
  string description = 4;
  string company = 5;
  repeated string requirements = 6;
}

message JobAdResponseProto {
  string id = 1;
  string userId = 2;
  string title = 3;
  string position = 4;
  string description = 5;
  string company = 6;
  repeated string requirements = 7;
  string status = 8;
}