syntax = "proto3";

option java_multiple_files = true;
package proto;
import "jobAdModel.proto";

service JobAdGrpcService{
  rpc addNewJobAd (JobAdProto) returns (JobAdResponseProto);
  rpc getUserJobAds (GetJobAdsRequestProto) returns (GetJobAdsResponseProto);
}